<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="media_name">Медиатека</string>
    <string name="find_name">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Тёмная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="support_apply">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

</resources>